text align fix

--- a/Aufgabe03/style.css
+++ b/Aufgabe03/style.css
@@ -100,7 +100,6 @@ nav a:hover{
     margin-right: auto;
     width: 800px;
     margin-top: 100px;
-    text-align: center;
 }
 
 .aboutme h2{
